--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Conviértete en miembro</a>
+              <a class="nav__link" href="#">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link">Contactos</a>
+              <a class="nav__link" href="#">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -204,7 +204,7 @@
             </div>
           </div>
         </section>
-        <section class="membership">
+        <section class="membership" id="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -263,5 +263,51 @@
         </section>
       </main>
     </div>
+    <footer class="footer" id="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_logo">
+          <img
+            src="./images/logo_white.svg"
+            alt="logo biblioteca triple"
+            class="footer__logo"
+          />
+        </div>
+        <div class="footer__column footer__column_content_hours">
+          <h3 class="footer__column-heading">Horario de apertura</h3>
+          <ul class="footer__list">
+            <li class="footer__list-item">Lunes a viernes: 9 a.m. -- 8 p.m.</li>
+            <li class="footer__list-item">
+              Sábados y domingos: 10 a.m. -- 6p.m.
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column footer__column_content_social">
+          <h3 class="footer__column-heading">Redes sociales</h3>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a class="footer__column-link" href="#">
+                <img
+                  src="/images/facebook_white.svg"
+                  alt="Facebook"
+                  class="footer__social-icon"
+                />
+                Facebook
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__column-link" href="#">
+                <img
+                  src="/images/instagram_white.svg"
+                  alt="instagram"
+                  class="footer__social-icon"
+                />
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer__copyright">© 2024 Oscar Herrera</p>
+    </footer>
   </body>
 </html>
