--- a/index.html
+++ b/index.html
@@ -262,52 +262,54 @@
           </ul>
         </section>
       </main>
+      <footer class="footer" id="footer">
+        <div class="footer__columns">
+          <div class="footer__column footer__column_logo">
+            <img
+              src="./images/logo_white.svg"
+              alt="logo biblioteca triple"
+              class="footer__logo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h3 class="footer__column-heading">Horario de apertura</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                Lunes a viernes: 9 a.m. -- 8 p.m.
+              </li>
+              <li class="footer__list-item">
+                Sábados y domingos: 10 a.m. -- 6p.m.
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    src="/images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__column-link" href="#">
+                  <img
+                    src="/images/instagram_white.svg"
+                    alt="instagram"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2024 Oscar Herrera</p>
+      </footer>
     </div>
-    <footer class="footer" id="footer">
-      <div class="footer__columns">
-        <div class="footer__column footer__column_logo">
-          <img
-            src="./images/logo_white.svg"
-            alt="logo biblioteca triple"
-            class="footer__logo"
-          />
-        </div>
-        <div class="footer__column footer__column_content_hours">
-          <h3 class="footer__column-heading">Horario de apertura</h3>
-          <ul class="footer__list">
-            <li class="footer__list-item">Lunes a viernes: 9 a.m. -- 8 p.m.</li>
-            <li class="footer__list-item">
-              Sábados y domingos: 10 a.m. -- 6p.m.
-            </li>
-          </ul>
-        </div>
-        <div class="footer__column footer__column_content_social">
-          <h3 class="footer__column-heading">Redes sociales</h3>
-          <ul class="footer__list">
-            <li class="footer__list-item">
-              <a class="footer__column-link" href="#">
-                <img
-                  src="/images/facebook_white.svg"
-                  alt="Facebook"
-                  class="footer__social-icon"
-                />
-                Facebook
-              </a>
-            </li>
-            <li class="footer__list-item">
-              <a class="footer__column-link" href="#">
-                <img
-                  src="/images/instagram_white.svg"
-                  alt="instagram"
-                  class="footer__social-icon"
-                />
-                Instagram
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <p class="footer__copyright">© 2024 Oscar Herrera</p>
-    </footer>
   </body>
 </html>
